--- a/public/404.html
+++ b/public/404.html
@@ -2,7 +2,7 @@
   <body>
     <script>
       (async () => {
-        const response = await fetch('https://api.github.com/repos/:user/:repo/contents/');
+        const response = await fetch('https://api.github.com/repos/Sirherobrine23/Apt-repository-with-Gh-pages/contents/');
         const data = await response.json();
         let htmlString = '<ul>';
         for (let file of data) {
