--- a/public/404.html
+++ b/public/404.html
@@ -2,13 +2,13 @@
   <body>
     <script>
       (async () => {
-        const response = await fetch('https://api.github.com/repos/Sirherobrine23/Apt-repository-with-Gh-pages/contents/');
+        const response = await fetch('https://api.github.com/repos/:user/:repo/contents/');
         const data = await response.json();
-        let htmlString = '<ul>';
+        let htmlString = '<p>';
         for (let file of data) {
-          htmlString += `<li><a href="${file.path}">${file.name}</a></li>`;
+          htmlString += `<h1><a href="${file.path}">${file.name}</a></h1>`;
         }
-        htmlString += '</ul>';
+        htmlString += '</p>';
         document.getElementsByTagName('body')[0].innerHTML = htmlString;
       })()
     </script>
