--- a/public/404.html
+++ b/public/404.html
@@ -1,16 +1,5 @@
 <html>
   <body>
-    <script>
-      (async () => {
-        const response = await fetch('https://api.github.com/repos/:user/:repo/contents/');
-        const data = await response.json();
-        let htmlString = '<p>';
-        for (let file of data) {
-          htmlString += `<h1><a href="${file.path}">${file.name}</a></h1>`;
-        }
-        htmlString += '</p>';
-        document.getElementsByTagName('body')[0].innerHTML = htmlString;
-      })()
-    </script>
+    <a href="/">/</a>
   <body>
 </html>
