deploy: 6161fe225948d1058ee8666a55ba714e78449e1f

--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
                     <p>
                         <a>add repo</a>
                     </p>
-                    <code>wget -O - https://sirherobrine23.github.io/Apt-Pages/dists/pages/Release.gpg | sudo apt-key add -</code>
+                    <code>wget -O - https://sirherobrine23.github.io/Apt-Pages/Release.gpg | sudo apt-key add -</code>
                     <br>
+                    <p>pages sources.list</p>
                     <code>deb https://sirherobrine23.github.io/Apt-Pages/ pages main</code>
                     <p>
                         <a>package list | lista de pacotes</a>
@@ -49,7 +50,7 @@
                         <p>
                             <a>---------------</a>
                         </p>
-                        <a href=/pool/main/e/example-helloworld/example-helloworld_1.0.0.0_amd64.deb>/pool/main/e/example-helloworld/example-helloworld_1.0.0.0_amd64.deb</a>
+                        <a href=/pool/main/e/example-helloworld/example-helloworld_1.0.0.0_i386.deb>/pool/main/e/example-helloworld/example-helloworld_1.0.0.0_i386.deb</a>
                     </p>
 
 
@@ -57,7 +58,7 @@
                         <p>
                             <a>---------------</a>
                         </p>
-                        <a href=/pool/main/e/example-helloworld/example-helloworld_1.0.0.0_i386.deb>/pool/main/e/example-helloworld/example-helloworld_1.0.0.0_i386.deb</a>
+                        <a href=/pool/main/e/example-helloworld/example-helloworld_1.0.0.0_amd64.deb>/pool/main/e/example-helloworld/example-helloworld_1.0.0.0_amd64.deb</a>
                     </p>
 
 
